Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-11679

QML examples documentation pages do not have breadcrumb links to QML examples index

    XMLWordPrintable

Details

    • 69910bc33dc448a9aa81eb00ed45be6d0488e447

    Description

      For example, the "Image" example at http://doc.qt.nokia.com/4.7-snapshot/declarative-imageelements-image.html has a breadcrumbs trail of "Home > Examples > Image Elements: Image".

      The breadcrumb trail should instead be "Home > Examples > QML Examples > Image Elements: Image" so that the user can find the QML examples index from an individual example page. This is what is implemented for other Qt examples, e.g. http://doc.qt.nokia.com/4.7-snapshot/itemviews-addressbook.html has a breadcrumb trail of "Home > Examples > Item Views Examples > Address Book Example", not "Home > Examples > Address Book Example".

      Without this, users cannot find the QML examples index if they have navigated to an individual example page from the class documentation.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            gbk Martin Smith (Qt)
            bealam Bea Lam (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes