qdoc: Fixed breadcrumbs for QML examples.

Task-number: QTBUG-11679
(cherry picked from commit 69910bc33dc448a9aa81eb00ed45be6d0488e447)